k8s/web-ingressroute.yaml
# If using a Traefik Ingress Controller, create an IngressRoute resource as follows:
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: temporal-sports-tracker-ingressroute
  namespace: temporal-sports-tracker
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`[YOUR HOST INFO]`)
      kind: Rule
      services:
        - name: temporal-sports-tracker-web-service
          port: 80
